Fix issue that scrollbar would appear on whole page

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -79,7 +79,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 98%;
   overflow: hidden;
   text-align: center;
 }
